--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^3.0.0",
-    "bootstrap-sass": "^3.0.0"
+    "underscore.string": "^3.2.2"
   }
 }
