--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^3.0.0",
+    "parsleyjs": "^2.2.0-rc4",
     "underscore.string": "^3.2.2"
   }
 }
