--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "jquery": "^2.2.0",
+    "underscore": "^1.8.3",
+    "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.0.0",
     "laravel-elixir": "^3.0.0",
     "parsleyjs": "^2.2.0-rc4",
