--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "private": true,
   "devDependencies": {
     "browserify": "^12.0.1",
+    "es2015": "0.0.1",
     "gulp": "^3.8.8"
   },
   "dependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "bootstrap": "^3.3.6",
     "bootstrap-sass": "^3.0.0",
     "jquery": "^2.2.0",
     "jquery-ui": "^1.10.5",
-    "laravel-elixir": "^3.0.0",
+    "laravel-elixir": "^4.0.0",
+    "laravel-elixir-livereload": "^1.0",
     "parsleyjs": "^2.2.0-rc4",
     "underscore": "^1.8.3",
     "underscore.string": "^3.2.2"
